--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -328,3 +328,50 @@ strong {
 .bypostauthor {
     /* required */
 }
+
+.article-post-title {
+	font-family: $fontFamily;
+	font-size: 24px;
+	line-height: 30px;
+	letter-spacing: 0;
+	margin-bottom: $grid-gutter-width/2;
+	text-transform: uppercase;
+
+	a {
+		font-weight: 500;
+		letter-spacing: 0;
+	}
+}
+.article-post-more {
+	font-size: 14px;
+}
+
+.article-post-excerpt {
+	font-size: 16px;
+	line-height: 26px;	
+	
+	.read-more {
+		@extend .article-post-more;
+	}
+}
+.article-post-thumbnail {
+	display: block;
+	margin-bottom: $grid-gutter-width/2;
+	
+	@include breakFirst( $screen-phone ){
+		float: left;
+		margin-right: $grid-gutter-width/2;
+		margin-bottom: $grid-gutter-width;
+	}
+	
+	@include breakFirst( medium ){
+		margin-right: $grid-gutter-width;
+		margin-bottom: $grid-gutter-width;
+	}
+}
+
+.category {
+	.entry-title {
+		//@extend .article-post-title;
+	}
+}
