--- a/sass/_widgets.scss
+++ b/sass/_widgets.scss
@@ -81,43 +81,16 @@
 
 
 .widget-post-title {
-	font-family: $fontFamily;
-	font-size: 24px;
-	line-height: 30px;
-	letter-spacing: 0;
-	margin-bottom: $grid-gutter-width/2;
-	text-transform: uppercase;
-
-	a {
-		font-weight: 500;
-		letter-spacing: 0;
-	}
+	@extend .article-post-title;
 }
 .widget-post-more {
-	font-size: 14px;
+	@extend .article-post-more;
 }
 
 .widget-post-excerpt {
-	font-size: 16px;
-	line-height: 26px;	
-	
-	.read-more {
-		@extend .widget-post-more;
-	}
+	@extend .article-post-excerpt;
 }
 .widget-post-thumbnail {
-	display: block;
-	margin-bottom: $grid-gutter-width/2;
-	
-	@include breakFirst( $screen-phone ){
-		float: left;
-		margin-right: $grid-gutter-width/2;
-		margin-bottom: $grid-gutter-width;
-	}
-	
-	@include breakFirst( medium ){
-		margin-right: $grid-gutter-width;
-		margin-bottom: $grid-gutter-width;
-	}
+	@extend .article-post-thumbnail;
 }
 
